--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "homepage": "https://github.com/rjpizarro/minesweeper-API#readme",
   "devDependencies": {
+    "@types/dot-prop-immutable": "^1.5.1",
     "@types/express": "^4.17.6",
+    "@types/lodash": "^4.14.150",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "dot-prop-immutable": "^2.1.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15"
   }
 }
