--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' ./src/app.ts",
     "tsc": "tsc",
-    "test": "test"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,15 @@
   },
   "homepage": "https://github.com/rjpizarro/minesweeper-API#readme",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/dot-prop-immutable": "^1.5.1",
     "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
+    "babel-jest": "^25.4.0",
+    "jest": "^25.4.0",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.0",
     "typescript": "^3.8.3"
