Added MongoDB connection and models schema

--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "url": "https://github.com/rjpizarro/minesweeper-API/issues"
   },
   "homepage": "https://github.com/rjpizarro/minesweeper-API#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dot-prop-immutable": "^2.1.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.10"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
@@ -27,16 +35,11 @@
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
+    "@types/mongoose": "^5.7.12",
     "babel-jest": "^25.4.0",
     "jest": "^25.4.0",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.0",
     "typescript": "^3.8.3"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "dot-prop-immutable": "^2.1.0",
-    "express": "^4.17.1",
-    "lodash": "^4.17.15"
   }
 }
