--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "homepage": "https://github.com/rjpizarro/minesweeper-API#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "catchify": "^2.6.1",
     "dot-prop-immutable": "^2.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.10",
     "swagger-ui-express": "^4.1.4",
@@ -36,9 +38,11 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/dot-prop-immutable": "^1.5.1",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/lodash": "^4.14.150",
     "@types/mongoose": "^5.7.12",
     "@types/swagger-ui-express": "^4.1.2",
