--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "catchify": "^2.6.1",
+    "cors": "^2.8.5",
     "dot-prop-immutable": "^2.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -39,6 +40,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.6",
     "@types/dot-prop-immutable": "^1.5.1",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
